
<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Tiêu đề Dashboard cố định -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1F41BB"
        android:padding="16dp">

        <TextView
            android:id="@+id/header_title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_title"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:layout_alignParentStart="true"/>

        <ImageView
            android:id="@+id/notification_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/bell"
            app:tint="@android:color/white" />


    </RelativeLayout>

    <!-- Nội dung cuộn -->
    <ScrollView
        android:id="@+id/scrollable_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Phần chào mừng người dùng -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="16dp"
                android:layout_marginBottom="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/user_avatar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/rounded_white_background"
                    android:src="@drawable/ic_profile_picture_placeholder"
                    app:shapeAppearanceOverlay="@style/CircleImageView" />

                <TextView
                    android:id="@+id/user_welcome_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/user_avatar"
                    android:layout_marginStart="16dp"
                    android:text="@string/welcome_message"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_greeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_welcome_message"
                    android:layout_toEndOf="@id/user_avatar"
                    android:layout_marginStart="16dp"
                    android:text="@string/greeting_message"
                    android:textSize="14sp" />
            </RelativeLayout>

            <!-- Phần Báo cáo cơ bản -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fundamental_reports_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <!-- Fundamental Report Cards -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@android:color/white"
                    android:padding="16dp"
                    android:layout_marginEnd="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pothole_report"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/potholeCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8"
                        android:textColor="#3abd5d"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/need_improvement"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/detailsbutton"
                        android:contentDescription="@string/details_button_description"
                        android:clickable="true"
                        android:focusable="true"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@android:color/white"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/traveled_distance"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/traveledDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0 m"
                        android:textColor="#3abd5d"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/excellent"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/detailsbutton"
                        android:contentDescription="@string/details_button_description"
                        android:clickable="true"
                        android:focusable="true"/>
                </LinearLayout>
            </LinearLayout>

            <!-- Recent Pothole Severity Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:textAlignment="center"
                android:padding="16dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="349dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/recent_pothole_severity_title"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.patrykandpatrick.vico.views.chart.ChartView
                    android:id="@+id/recentPotholePieChart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="Overview Report"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.patrykandpatrick.vico.views.chart.ComposedChartView
                        android:id="@+id/overviewReportLineChart"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="16dp" />
                </LinearLayout>

            </LinearLayout>

            <!-- Visualization Section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visualization_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <!-- Overview Report Section -->
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:columnCount="2"
                android:rowCount="2">

                <!-- Accelerator X -->

                <!-- Accelerator Y -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accelerator_x"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/acceleratorX"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.0"
                        android:textColor="#3abd5d"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accelerator_y"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/acceleratorY"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.0"
                        android:textColor="#3abd5d"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textSize="14sp" />

                </LinearLayout>

                <!-- Accelerator Z -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accelerator_z"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/acceleratorZ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.0"
                        android:textColor="#3abd5d"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textSize="14sp" />

                </LinearLayout>

                <!-- Parameter T -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/parameter_t"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/combinedDelta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.0"
                        android:textColor="#3abd5d"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:clickable="true"
                        android:contentDescription="@string/details_button_description"
                        android:focusable="true"
                        android:src="@drawable/detailsbutton" />
                </LinearLayout>
            </GridLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:padding="16dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overview_report_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/overviewreport" />
            </LinearLayout>

            <!-- Phần nội dung còn lại -->
            <!-- Thêm các phần khác như Hình ảnh và Báo cáo tổng quan tương tự -->

        </LinearLayout>
    </ScrollView>

    <!-- Nav barr -->
    <include
        android:id="@+id/item_navigation_bar"
        layout="@layout/item_navigation_bar" />


</RelativeLayout>
